# solanaexample

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: configuration.rs  lib.rs  protocol.rs
contract/: Cargo.toml  program_id
contract/src/: lib.rs
