[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.8.5"
solana-cli-config = "1.8.5"
env_logger = "0.9.0"
confy = "0.4.0"
solana-client = "1.8.5"
contract = { path = "../contract" }
serde = "1.0.130"
serde_json = "1.0.72"
borsh = "0.9.1"