[package]
name = "contract"
version = "0.1.0"
edition = "2018"

[dependencies]
solana-program = "1.8.5"
num-traits = "0.2.14"
num-derive = "0.3.3"
thiserror = "1.0.30"
spl-token = "3.2.0"
borsh = "0.9.1"

[features]
test-bpf = []

[dev-dependencies]
solana-sdk = "1.8.5"
solana-validator = "1.8.5"
solana-program-test = "1.8.5"

[lib]
crate-type = ["cdylib", "lib"]